Fix build issues

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "doppler run -- next dev",
-    "build": "doppler run -- next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
