--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@hookform/resolvers": "^2.9.7",
+    "@hotjar/browser": "^1.0.6",
     "@sentry/nextjs": "^7.16.0",
     "axios": "^0.27.2",
     "framer-motion": "^7.2.1",
