--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dropzone": "^14.2.2",
     "react-hook-form": "^7.34.2",
     "react-icons": "^4.4.0",
+    "react-player": "^2.11.0",
     "react-prettify-json": "^1.1.1",
     "ts-pattern": "^4.0.5",
     "yup": "^0.32.11"
