Video Encoding Preview

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^2.9.7",
     "@hotjar/browser": "^1.0.6",
     "@sentry/nextjs": "^7.16.0",
+    "@vidstack/react": "^0.6.13",
     "axios": "^0.27.2",
     "framer-motion": "^7.2.1",
     "next": "12.2.5",
@@ -28,6 +29,7 @@
     "react-player": "^2.11.0",
     "react-prettify-json": "^1.1.1",
     "ts-pattern": "^4.0.5",
+    "vidstack": "^0.6.13",
     "yup": "^0.32.11"
   },
   "devDependencies": {
