--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-auth": "^4.10.3",
     "node-jsonwebtoken": "^0.0.1",
     "react": "18.2.0",
+    "react-code-blocks": "^0.1.3",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.2",
     "react-hook-form": "^7.34.2",
